[gd_scene load_steps=8 format=3 uid="uid://dkhy1km40x481"]

[ext_resource type="Script" path="res://CheckersMain.gd" id="1_farx3"]
[ext_resource type="Theme" uid="uid://d2vr315te7cd8" path="res://DefaultTheme.tres" id="3_183qv"]
[ext_resource type="Theme" uid="uid://tvwj3tis3sd3" path="res://BigTextTheme.tres" id="3_cfsq8"]
[ext_resource type="Script" path="res://Chat.gd" id="4_4to8l"]
[ext_resource type="Script" path="res://MainMenu.gd" id="4_8ejgy"]
[ext_resource type="Script" path="res://Matching.gd" id="5_2igk7"]
[ext_resource type="Script" path="res://OnlineReady.gd" id="6_8trr2"]

[node name="CheckersMain" type="Node2D"]
script = ExtResource("1_farx3")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1024, 512)
offset_right = 412.0
offset_bottom = 227.0
mouse_filter = 2
theme = ExtResource("3_183qv")
metadata/_edit_use_anchors_ = true

[node name="VBoxUI" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MainMenu" type="VBoxContainer" parent="MarginContainer/VBoxUI"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_cfsq8")
theme_override_constants/separation = 10
script = ExtResource("4_8ejgy")

[node name="Title" type="Label" parent="MarginContainer/VBoxUI/MainMenu"]
layout_mode = 2
text = "Welcome to Checkers!"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/VBoxUI/MainMenu"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = " < Back "

[node name="MainButtons" type="VBoxContainer" parent="MarginContainer/VBoxUI/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 10

[node name="OneComputer" type="Button" parent="MarginContainer/VBoxUI/MainMenu/MainButtons"]
layout_mode = 2
size_flags_horizontal = 4
text = " Play on one computer "

[node name="LocalNetwork" type="Button" parent="MarginContainer/VBoxUI/MainMenu/MainButtons"]
layout_mode = 2
size_flags_horizontal = 4
text = " Play on a local network "

[node name="OverInternet" type="Button" parent="MarginContainer/VBoxUI/MainMenu/MainButtons"]
layout_mode = 2
size_flags_horizontal = 4
text = " Play over the internet "

[node name="OneComputerBox" type="VBoxContainer" parent="MarginContainer/VBoxUI/MainMenu"]
visible = false
layout_mode = 2

[node name="Line4" type="ColorRect" parent="MarginContainer/VBoxUI/MainMenu/OneComputerBox"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="LocalGame" type="Button" parent="MarginContainer/VBoxUI/MainMenu/OneComputerBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Local Game"

[node name="LocalNetworkBox" type="VBoxContainer" parent="MarginContainer/VBoxUI/MainMenu"]
visible = false
layout_mode = 2

[node name="Line" type="ColorRect" parent="MarginContainer/VBoxUI/MainMenu/LocalNetworkBox"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="HostGameBox" type="HBoxContainer" parent="MarginContainer/VBoxUI/MainMenu/LocalNetworkBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PortLabel" type="Label" parent="MarginContainer/VBoxUI/MainMenu/LocalNetworkBox/HostGameBox"]
layout_mode = 2
text = "Port:"

[node name="HostPortEntry" type="LineEdit" parent="MarginContainer/VBoxUI/MainMenu/LocalNetworkBox/HostGameBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HostGame" type="Button" parent="MarginContainer/VBoxUI/MainMenu/LocalNetworkBox/HostGameBox"]
layout_mode = 2
text = "Host Game"

[node name="Line2" type="ColorRect" parent="MarginContainer/VBoxUI/MainMenu/LocalNetworkBox"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="JoinGameBox" type="HBoxContainer" parent="MarginContainer/VBoxUI/MainMenu/LocalNetworkBox"]
layout_mode = 2

[node name="AddressLabel" type="Label" parent="MarginContainer/VBoxUI/MainMenu/LocalNetworkBox/JoinGameBox"]
layout_mode = 2
text = "IP address:"

[node name="IPAddressEntry" type="LineEdit" parent="MarginContainer/VBoxUI/MainMenu/LocalNetworkBox/JoinGameBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="PortLabel" type="Label" parent="MarginContainer/VBoxUI/MainMenu/LocalNetworkBox/JoinGameBox"]
layout_mode = 2
text = "Port:"

[node name="IPPortEntry" type="LineEdit" parent="MarginContainer/VBoxUI/MainMenu/LocalNetworkBox/JoinGameBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="JoinGame" type="Button" parent="MarginContainer/VBoxUI/MainMenu/LocalNetworkBox/JoinGameBox"]
layout_mode = 2
text = "Join Game"

[node name="OverInternetBox" type="VBoxContainer" parent="MarginContainer/VBoxUI/MainMenu"]
visible = false
layout_mode = 2

[node name="Line3" type="ColorRect" parent="MarginContainer/VBoxUI/MainMenu/OverInternetBox"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="OnlineGame" type="Button" parent="MarginContainer/VBoxUI/MainMenu/OverInternetBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Online Game"

[node name="TurnDisplay" type="HBoxContainer" parent="MarginContainer/VBoxUI"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_cfsq8")
theme_override_constants/separation = 0

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBoxUI/TurnDisplay"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Out" type="Label" parent="MarginContainer/VBoxUI/TurnDisplay/HBox"]
layout_mode = 2
text = "White"
uppercase = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxUI/TurnDisplay/HBox"]
layout_mode = 2
text = "'s turn"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxUI/TurnDisplay"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="WinResult" type="VBoxContainer" parent="MarginContainer/VBoxUI"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_cfsq8")
theme_override_constants/separation = 0

[node name="Winner" type="HBoxContainer" parent="MarginContainer/VBoxUI/WinResult"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Out" type="Label" parent="MarginContainer/VBoxUI/WinResult/Winner"]
layout_mode = 2
size_flags_horizontal = 3
text = "no-one"
horizontal_alignment = 2
uppercase = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxUI/WinResult/Winner"]
layout_mode = 2
size_flags_horizontal = 3
text = " wins!"

[node name="Score" type="HBoxContainer" parent="MarginContainer/VBoxUI/WinResult"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxUI/WinResult/Score"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "with"

[node name="Out" type="Label" parent="MarginContainer/VBoxUI/WinResult/Score"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "12"

[node name="Label3" type="Label" parent="MarginContainer/VBoxUI/WinResult/Score"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "pieces"

[node name="Label" type="Label" parent="MarginContainer/VBoxUI/WinResult"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 52
text = "remaining"

[node name="PlayAgain" type="Button" parent="MarginContainer/VBoxUI/WinResult"]
layout_mode = 2
size_flags_horizontal = 4
text = "Play again"

[node name="Chat" type="HBoxContainer" parent="MarginContainer/VBoxUI"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_4to8l")

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBoxUI/Chat"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxControls" type="VBoxContainer" parent="MarginContainer/VBoxUI/Chat/VBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartMultiGame" type="Button" parent="MarginContainer/VBoxUI/Chat/VBox/VBoxControls"]
layout_mode = 2
disabled = true
text = "Play the game"

[node name="ReadyButton" type="Button" parent="MarginContainer/VBoxUI/Chat/VBox/VBoxControls"]
layout_mode = 2
toggle_mode = true
text = "Ready"

[node name="VBoxMPStatus" type="VBoxContainer" parent="MarginContainer/VBoxUI/Chat/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxChatEntry" type="HBoxContainer" parent="MarginContainer/VBoxUI/Chat/VBox/VBoxMPStatus"]
layout_mode = 2
size_flags_vertical = 10

[node name="ChatEntry" type="LineEdit" parent="MarginContainer/VBoxUI/Chat/VBox/VBoxMPStatus/HBoxChatEntry"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChatSend" type="Button" parent="MarginContainer/VBoxUI/Chat/VBox/VBoxMPStatus/HBoxChatEntry"]
layout_mode = 2
text = "send"

[node name="Scroll" type="ScrollContainer" parent="MarginContainer/VBoxUI/Chat/VBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="VBoxChat" type="VBoxContainer" parent="MarginContainer/VBoxUI/Chat/VBox/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10

[node name="Spacer" type="Control" parent="MarginContainer/VBoxUI/Chat"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Matching" type="HBoxContainer" parent="MarginContainer/VBoxUI"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("5_2igk7")

[node name="Names" type="ScrollContainer" parent="MarginContainer/VBoxUI/Matching"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBoxUI/Matching/Names"]
layout_mode = 2

[node name="Challenges" type="ScrollContainer" parent="MarginContainer/VBoxUI/Matching"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBoxUI/Matching/Challenges"]
layout_mode = 2

[node name="OnlineReady" type="HBoxContainer" parent="MarginContainer/VBoxUI"]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("6_8trr2")

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBoxUI/OnlineReady"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxReady" type="HBoxContainer" parent="MarginContainer/VBoxUI/OnlineReady/VBox"]
layout_mode = 2

[node name="ReadyButton" type="Button" parent="MarginContainer/VBoxUI/OnlineReady/VBox/HBoxReady"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Ready"

[node name="StartGame" type="Button" parent="MarginContainer/VBoxUI/OnlineReady/VBox/HBoxReady"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Start Game"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxUI/OnlineReady"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[connection signal="pressed" from="MarginContainer/VBoxUI/MainMenu/BackButton" to="MarginContainer/VBoxUI/MainMenu" method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxUI/MainMenu/MainButtons/OneComputer" to="MarginContainer/VBoxUI/MainMenu" method="_on_one_computer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxUI/MainMenu/MainButtons/LocalNetwork" to="MarginContainer/VBoxUI/MainMenu" method="_on_local_network_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxUI/MainMenu/MainButtons/OverInternet" to="MarginContainer/VBoxUI/MainMenu" method="_on_over_internet_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxUI/MainMenu/OneComputerBox/LocalGame" to="." method="_on_local_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxUI/MainMenu/LocalNetworkBox/HostGameBox/HostGame" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxUI/MainMenu/LocalNetworkBox/JoinGameBox/JoinGame" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxUI/MainMenu/OverInternetBox/OnlineGame" to="." method="_on_online_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxUI/WinResult/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxUI/Chat/VBox/VBoxControls/StartMultiGame" to="." method="_on_start_multi_game_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxUI/Chat/VBox/VBoxControls/ReadyButton" to="MarginContainer/VBoxUI/Chat" method="_on_ready_button_toggled"]
[connection signal="text_submitted" from="MarginContainer/VBoxUI/Chat/VBox/VBoxMPStatus/HBoxChatEntry/ChatEntry" to="MarginContainer/VBoxUI/Chat" method="_on_chat_entry_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxUI/Chat/VBox/VBoxMPStatus/HBoxChatEntry/ChatSend" to="MarginContainer/VBoxUI/Chat" method="_on_chat_send_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxUI/OnlineReady/VBox/HBoxReady/ReadyButton" to="MarginContainer/VBoxUI/OnlineReady" method="_on_ready_button_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxUI/OnlineReady/VBox/HBoxReady/StartGame" to="MarginContainer/VBoxUI/OnlineReady" method="_on_start_game_pressed"]
